[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name = bp-lib-loader
version      = attr: libloader.__version__
description = Quickly and easily load shared libraries from various platforms. Also includes a libloader.com module for loading com modules on Windows.
;long-description = file: readme.rst
url = https://github.com/blindpandas/bp-libloader
author       = Blind Pandas Team (original: Christopher Toth<q@q-continuum.net>)
author-email = info@blindpandas.com
license      = MIT
keywords     = lib dll so
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    pywin32==228;sys_platform=="win32"

[options.packages.find]
where=.
